--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "license": "AGPL-3.0-or-later",
   "homepage": "https://silentius-satoshi.github.io/ZapTok/",
   "scripts": {
     "dev": "npm i && vite",
