--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^10.0.0",
     "@types/web-push": "^3.6.4",
-    "@vercel/node": "^2.3.0",
+    "@vercel/node": "^5.4.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
@@ -142,5 +142,10 @@
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.2",
     "vitest": "^3.1.4"
+  },
+  "overrides": {
+    "path-to-regexp": "^6.3.0",
+    "esbuild": "^0.25.11",
+    "undici": "^7.16.0"
   }
 }
